feat: add chain ids
