# models/service_info.go
@@ -17,11 +17,17 @@ import (
 // swagger:model ServiceInfo
 type ServiceInfo struct {
 
+	// bsc chain id
+	BscChainID int64 `json:"bsc_chain_id"`
+
 	// bsc erc 1155 swap agent
 	BscErc1155SwapAgent string `json:"bsc_erc_1155_swap_agent"`
 
 	// bsc erc 721 swap agent
 	BscErc721SwapAgent string `json:"bsc_erc_721_swap_agent"`
+
+	// eth chain id
+	EthChainID int64 `json:"eth_chain_id"`
 
 	// eth erc 1155 swap agent
 	EthErc1155SwapAgent string `json:"eth_erc_1155_swap_agent"`
